--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -84,8 +84,10 @@
 }
 
 .section-heading {
-    font-family: Lato, arial, verdana, helvetica, sans-serif;
-    font-weight: 600;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 1.235;
+    letter-spacing: 0.00735em;
     margin-top: 2rem;
     margin-bottom: 0.5rem;
 }
