--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,10 +1,12 @@
 body {
-    font-family: 'Nunito', sans-serif;
     background-color: $off-white;
-    color: black;
 
-    transition-property: background;
-    transition: background 250ms ease-in-out;
+    font-family: 'Roboto', sans-serif;
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.43;
+    letter-spacing: 0.01071em;
+    color: rgba(0, 0, 0, 0.87);    
 }
 
 body.dark {
