Darken colours of links

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,8 +7,8 @@ $dark-grey: #606060;
 $light-grey: #CDCDCD;
 $pink: #dc635f;
 $dark-pink: #c34a47;
-$blue: #00D3D3; //#5bc0de;
-$green: #38dd1a; //#5cb85c;
+$blue: #00c1d3; //#5bc0de;
+$green: #28dd1a; //#5cb85c;
 
 // Dark theme
 $light-black: #242424;
