--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -62,6 +62,11 @@ footer {
         a {
             border-bottom: none;
             color: #007bff;
+            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+        }
+
+        a:hover {
+            color: darken(#007bff, 10%);
         }
     }
 
