--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -45,14 +45,23 @@
         font-size: 1rem;
         font-weight: 400;
         text-transform: uppercase;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     }
 
     .demo-link {
         color: $green;
     }
 
+    .demo-link:hover {
+        color: darken($green, 10%);
+    }
+
     .repo-link {
         color: $blue;
+    }
+
+    .repo-link:hover {
+        color: darken($blue, 10%);
     }
 
     .demo-link + .repo-link {
