Change background colour

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,7 @@ $tablet-breakpoint: 1000px;
 
 // Light theme
 $white: #fff;
-$off-white: rgb(246, 248, 250);
+$off-white: #fcfcfc;
 $dark-grey: #606060;
 $light-grey: #CDCDCD;
 $pink: #dc635f;
