--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -44,9 +44,11 @@
     .about-me {
         margin: 0;
         margin-top: 1.5rem;
+        margin-left: 0.25rem;
+        margin-right: 0.25rem;
 
-        p {
-            font-size: 17px;
+        p + p {
+            margin-top: 0.25rem;
         }
     }
 
@@ -67,8 +69,10 @@
             }
         }
 
-        .about-me > p{
-            font-size: 24px;
+        .about-me {
+            p {
+                font-size: 22px;
+            }
         }
     }
 }
