--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -2,6 +2,7 @@
     .container {
         min-width: 0.975 * $tablet-breakpoint;
         max-width: $tablet-breakpoint;
+        padding-left: 20px;
     }
 
     .single-column {
