--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -48,6 +48,10 @@
 
     .about-me {
         font-size: 17px;
+        width: 95%;
+        margin-left: auto;
+        margin-right: auto;
+        line-height: 1.5625em;
 
         p + p {
             margin-top: 0.25rem;
@@ -60,9 +64,6 @@
         }
 
         .about-me {
-            width: 95%;
-            margin-left: auto;
-            margin-right: auto;
             font-size: 22px;
         }
     }
