--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -41,8 +41,9 @@ hr {
 
 footer {
   display: grid;
-  padding-top: 2rem;
-  padding-bottom: 1rem;
+  margin-top: 2rem;
+  padding-top: 1rem;
+  border-top: 1px solid #e5e5e5;
 }
 
 @media (max-width: 1000px) {
@@ -108,6 +109,11 @@ footer .footer-links .link-container a {
   padding-top: 30px;
 }
 
+.profile .top-bar {
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #e5e5e5;
+}
+
 .profile .profile-image {
   margin: auto;
   border-radius: 50%;
@@ -130,7 +136,7 @@ footer .footer-links .link-container a {
 .profile .links-container {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-end;
   flex-wrap: wrap;
 }
 
