--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -66,11 +66,15 @@
     }
 
     .about-me {
+        background-color: #333;
+        color: white;
         font-size: 17px;
-        width: 95%;
+        line-height: 1.5625em;
+        padding: 1rem;
+        border-radius: 6px;
+        margin-top: 2rem;
         margin-left: auto;
         margin-right: auto;
-        line-height: 1.5625em;
 
         p + p {
             margin-top: 0.25rem;
