--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -174,11 +174,15 @@ footer .footer-links .link-container a {
 }
 
 .profile .about-me {
+  background-color: #333;
+  color: white;
   font-size: 17px;
-  width: 95%;
+  line-height: 1.5625em;
+  padding: 1rem;
+  border-radius: 6px;
+  margin-top: 2rem;
   margin-left: auto;
   margin-right: auto;
-  line-height: 1.5625em;
 }
 
 .profile .about-me p + p {
