--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -71,7 +71,7 @@
         font-size: 17px;
         line-height: 1.5625em;
         padding: 1rem;
-        border-radius: 6px;
+        border-radius: .25rem;
         margin-top: 2rem;
         margin-left: auto;
         margin-right: auto;
