Change background colour of about me section

--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -66,8 +66,7 @@
     }
 
     .about-me {
-        background-color: #333;
-        color: white;
+        border: solid #dc635f 1px;
         font-size: 17px;
         line-height: 1.5625em;
         padding: 1rem;
